@@ -1,0 +1,12 @@
+name                = Catalyst-Plugin-Authorization-ACL
+author              = Yuval Kogman <nothingmuch@woobling.org>
+license             = Perl_5
+copyright_holder    = Yuval Kogman
+copyright_year      = 2014
+
+[@AVAR]
+dist            = Catalyst-Plugin-Authorization-ACL
+bugtracker      = rt
+authority       = cpan:RKITOVER
+github_user     = rkitover
+install_command = cpanm .
