@@ -1,3 +1,0 @@
-use Test::More tests => 1;
-
-use_ok('Catalyst::Plugin::Authorization::ACL');
