@@ -1,4 +1,9 @@
-Revision history for Perl extension Catalyst::Plugin::Authorization::ACL
+Revision history for Catalyst::Plugin::Authorization::ACL
+
+{{$NEXT}}
+    - fix a spelling error and copyright statement (Jonathan Yu) (RT#95566)
+    - convert to git
+    - convert to dzil
 
 0.15  2009-10-18 05:56:51
         - apply fix from RT#50604 (filter undef actions when building tree)
